syntax = "proto3";
package joltify.joltifychain.poolincentives.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "pool_incentives/v1beta1/incentives.proto";

option go_package = "gitlab.com/joltify/joltifychain/x/pool_incentives/types";

// GenesisState defines the pool incentives module's genesis state.
message GenesisState {
  // params defines all the paramaters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated google.protobuf.Duration lockable_durations = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags) = "yaml:\"lockable_durations\""
  ];
  DistrInfo distr_info = 3 [
    (gogoproto.nullable) = true,
    (gogoproto.moretags) = "yaml:\"distr_info\""
  ];
}
